--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -5,11 +5,17 @@
     "DAYS": "дни",
     "DISCOUNT": "Отстъпка",
     "TAX": "Такса",
-    "TOTAL": "Общо",    
+    "TOTAL": "Общо",
     "SEARCH": "Търсене",
     "RESERVE": "Резервирай",
     "RESERVATION": "Резервация",
-    "RESERVATIONS": "Резервации"
+    "RESERVATIONS": "Резервации",
+    "FORWARD": "Напред",
+    "BACK": "Назад",
+    "YES": "Да",
+    "NO": "Не",
+    "KM": "км",
+    "PRICE": "Цена"
   },
   "HOME": {
     "AUTH": {
@@ -43,6 +49,7 @@
         "PHONE": "Телефон",
         "PHONE_ERROR_EMPTY": "Моля въведете телефон",
         "BIRTH_DATE": "Дата на раждане",
+        "BIRTH_DATE_ERROR_ADULT": "Трябва да имате навършени 18 години",
         "BIRTH_DATE_ERROR_EMPTY": "Въведете дата на разждане",
         "PASSWORD": "Парола",
         "PASSWORD_REQUIREMENTS": "Паролата трябва да бъде минимум 8 символа и да съдържа поне 1 главна буква, 1 малка буква, 1 цифра, 1 специален символ",
@@ -114,7 +121,12 @@
       "CARD_VALID": "Валидност MM/YY",
       "CVV": "CVV код за сигурност",
       "AGREE_WITH_RULES": "Съгласен съм с условията за използване",
-      "FREE_CANCELATION": "Безплатно анулиране до"
+      "FREE_CANCELATION": "Безплатно анулиране до",
+      "RENTER": "Наемател",
+      "DURATION": "Продължителност",
+      "RESERVATIONS_FOR": "Резервации за",
+      "NO_UPCOMING_FOR_CAR": "Няма насрочени резервации за този автомобил",
+      "AWAITING_FIRST": "Този автомобил очаква първият си наемател!"
     }
   },
   "USER": {
@@ -128,6 +140,363 @@
     "FREE_CANCEL": "Откажи безплатно до",
     "CHANGE_PICTURE": "Смяна на снимка",
     "INFORMATION": "Информация",
-    "SAVE": "Запази"
-  }
+    "SAVE": "Запази",
+    "FAVOURITES": "Любими",
+    "FAV_EMPTY": "Списъкът ви с любими е празен!",
+    "SUCCESS": "Успешно резервирахте",
+    "ADDED": "Добавен в любими!",
+    "REMOVED": "Премахнат от любими!",
+    "REGISTERED": "Вашият профил беше създаден успешно!"
+  },
+  "HOSTING": {
+    "PREVIEW": "Преглед",
+    "EDIT": "Редактирай",
+    "MAIN": "Основна информация",
+    "YEAR": "Година",
+    "CHOOSE_YEAR": "Изберете година",
+    "MAKE": "Марка",
+    "CHOOSE_MAKE": "Изберете марка",
+    "MODEL": "Модел",
+    "CHOOSE_MODEL": "Изберете модел",
+    "TRANSMISSION": "Скоростна кутия",
+    "MANUAL": "Ръчна",
+    "AUTOMATIC": "Автоматична",
+    "ENGINE_TYPE": "Тип двигател",
+    "CHOOSE_ENGINE": "Изберете тип двигател",
+    "PETROL": "Бензинов",
+    "DIESEL": "Дизелов",
+    "ELECTRIC": "Електрически",
+    "HYBRID": "Хибриден",
+    "CATEGORY": "Категория",
+    "CHOOSE_CATEGORY": "Изберете категория",
+    "CAR": "Лек автомобил",
+    "SUV": "Джип",
+    "MINIVAN": "Миниван",
+    "TRUCK": "Пикап",
+    "POWER": "Мощност",
+    "INPUT_POWER": "Въведете мощност",
+    "CONSUMPTION": "Разход",
+    "INPUT_CONSUMPTION": "Въведете разход",
+    "SEATS_COUNT": "Брой места",
+    "INPUT_SEATS": "Въведете брой",
+    "LOCATION": "Местоположение",
+    "CHOOSE_AREA": "Изберете област",
+    "CHOOSE_AREA_ERROR": "Моля изберете област",
+    "CHOOSE_CITY": "Изберете град",
+    "ADDRESS": "Адрес",
+    "INPUT_ADDRESS": "Въведете адрес",
+    "INPUT_ADDRESS_ERROR": "Моля въведете адрес",
+    "ZIP_CODE": "Пощенски код",
+    "INPUT_ZIP": "Въведете п.к.",
+    "INPUT_ZIP_ERROR": "Моля въведете п.к.",
+    "DESCRIPTION": "Допълнителна информация",
+    "ADD_DESC": "Добавете описание",
+    "WRITE_DESC": "Напишете нещо повече за колата...",
+    "ADD_PICS": "Добавете снимки",
+    "AMENITIES": "Удобства",
+    "RULES": "Условия и цена",
+    "RENTING_RULES": "Условия за наемане",
+    "PETS": "Домашни любимци",
+    "SMOKING": "Пушене в колата",
+    "INCLUDED_KM": "Включени километри",
+    "INCLUDED_KM_TOOLTIP": "Лимит километри на автомобила за ден",
+    "PRICE_AFTER_LIMIT": "Цена за км над включените",
+    "PRICE_AFTER_LIMIT_TOOLTIP": "Цена за всеки километър над включените",
+    "PRICE_PER_DAY": "Цена на автомобила за ден",
+    "WEEKLY_DISCOUNT": "Седмична отстъпка",
+    "WEEKLY_DISCOUNT_TOOLTIP": "Отстъпка при наемане на колата за повече от седмица",
+    "MONTHLY_DISCOUNT": "Месечна отстъпка",
+    "MONTHLY_DISCOUNT_TOOLTIP": "Отстъпка при наемане на колата за повече от месец",
+    "RULES_AGREEMENT": "Съгласен/на съм с условията",
+    "ADD": "Добави"
+  },
+  "Бензинов": "Бензинов",
+  "Дизелов": "Дизелов",
+  "Електрически": "Електрически",
+  "Хибриден": "Хибриден",
+  "Ръчна": "Ръчна",
+  "Автоматична": "Автоматична",
+  "Лек автомобил": "Лек автомобил",
+  "Джип": "Джип",
+  "Миниван": "Миниван",
+  "Пикап": "Пикап",
+  "Антиблокираща система": "Антиблокираща система",
+  "Автоматичен контрол на стабилността": "Автоматичен контрол на стабилността",
+  "Въздушни възглавници": "Въздушни възглавници",
+  "Парктроник": "Парктроник",
+  "Система за подпомагане на спирането": "Система за подпомагане на спирането",
+  "Система за защита от пробуксуване": "Система за защита от пробуксуване",
+  "Bluetooth / handsfree система": "Bluetooth / handsfree система",
+  "USB, AUX изводи": "USB, AUX изводи",
+  "Бордкомпютър": "Бордкомпютър",
+  "Навигация": "Навигация",
+  "Климатик": "Климатик",
+  "Подгряване на седалките": "Подгряване на седалките",
+  "Стерео уредба": "Стерео уредба",
+  "Автопилот": "Автопилот",
+  "7 места": "7 места",
+  "Панорамен люк": "Панорамен люк",
+  "Рейлинг на покрива": "Рейлинг на покрива",
+  "Халогенни фарове": "Халогенни фарове",
+  "Аларма": "Аларма",
+  "OFFROAD пакет": "OFFROAD пакет",
+  "Кожен салон": "Кожен салон",
+  "Десен волан": "Десен волан",
+  "Айтос": "Айтос",
+  "Аксаково": "Аксаково",
+  "Алфатар": "Алфатар",
+  "Антоново": "Антоново",
+  "Априлци": "Априлци",
+  "Ардино": "Ардино",
+  "Асеновград": "Асеновград",
+  "Ахелой": "Ахелой",
+  "Ахтопол": "Ахтопол",
+  "Балчик": "Балчик",
+  "Банкя": "Банкя",
+  "Банско": "Банско",
+  "Баня": "Баня",
+  "Батак": "Батак",
+  "Батановци": "Батановци",
+  "Белене": "Белене",
+  "Белица": "Белица",
+  "Белово": "Белово",
+  "Белоградчик": "Белоградчик",
+  "Белослав": "Белослав",
+  "Берковица": "Берковица",
+  "Благоевград": "Благоевград",
+  "Бобов дол": "Бобов дол",
+  "Бобошево": "Бобошево",
+  "Божурище": "Божурище",
+  "Бойчиновци": "Бойчиновци",
+  "Болярово": "Болярово",
+  "Борово": "Борово",
+  "Ботевград": "Ботевград",
+  "Брацигово": "Брацигово",
+  "Брегово": "Брегово",
+  "Брезник": "Брезник",
+  "Брезово": "Брезово",
+  "Брусарци": "Брусарци",
+  "Бургас": "Бургас",
+  "Бухово": "Бухово",
+  "Българово": "Българово",
+  "Бяла": "Бяла",
+  "Бяла": "Бяла",
+  "Бяла Слатина": "Бяла Слатина",
+  "Бяла Черква": "Бяла Черква",
+  "Варна": "Варна",
+  "Велики Преслав": "Велики Преслав",
+  "Велико Търново": "Велико Търново",
+  "Велинград": "Велинград",
+  "Ветово": "Ветово",
+  "Ветрен": "Ветрен",
+  "Видин": "Видин",
+  "Враца": "Враца",
+  "Вълчедръм": "Вълчедръм",
+  "Вълчи дол": "Вълчи дол",
+  "Върбица": "Върбица",
+  "Вършец": "Вършец",
+  "Габрово": "Габрово",
+  "Генерал Тошево": "Генерал Тошево",
+  "Главиница": "Главиница",
+  "Глоджево": "Глоджево",
+  "Годеч": "Годеч",
+  "Горна Оряховица": "Горна Оряховица",
+  "Гоце Делчев": "Гоце Делчев",
+  "Грамада": "Грамада",
+  "Гулянци": "Гулянци",
+  "Гурково": "Гурково",
+  "Гълъбово": "Гълъбово",
+  "Две могили": "Две могили",
+  "Дебелец": "Дебелец",
+  "Девин": "Девин",
+  "Девня": "Девня",
+  "Джебел": "Джебел",
+  "Димитровград": "Димитровград",
+  "Димово": "Димово",
+  "Добринище": "Добринище",
+  "Добрич": "Добрич",
+  "Долна баня": "Долна баня",
+  "Долна Митрополия": "Долна Митрополия",
+  "Долна Оряховица": "Долна Оряховица",
+  "Долни Дъбник": "Долни Дъбник",
+  "Долни чифлик": "Долни чифлик",
+  "Доспат": "Доспат",
+  "Драгоман": "Драгоман",
+  "Дряново": "Дряново",
+  "Дулово": "Дулово",
+  "Дунавци": "Дунавци",
+  "Дупница": "Дупница",
+  "Дългопол": "Дългопол",
+  "Елена": "Елена",
+  "Елин Пелин": "Елин Пелин",
+  "Елхово": "Елхово",
+  "Етрополе": "Етрополе",
+  "Завет": "Завет",
+  "Земен": "Земен",
+  "Златарица": "Златарица",
+  "Златица": "Златица",
+  "Златоград": "Златоград",
+  "Ивайловград": "Ивайловград",
+  "Игнатиево": "Игнатиево",
+  "Искър": "Искър",
+  "Исперих": "Исперих",
+  "Ихтиман": "Ихтиман",
+  "Каблешково": "Каблешково",
+  "Каварна": "Каварна",
+  "Казанлък": "Казанлък",
+  "Калофер": "Калофер",
+  "Камено": "Камено",
+  "Каолиново": "Каолиново",
+  "Карлово": "Карлово",
+  "Карнобат": "Карнобат",
+  "Каспичан": "Каспичан",
+  "Кермен": "Кермен",
+  "Килифарево": "Килифарево",
+  "Китен": "Китен",
+  "Клисура": "Клисура",
+  "Кнежа": "Кнежа",
+  "Козлодуй": "Козлодуй",
+  "Койнаре": "Койнаре",
+  "Копривщица": "Копривщица",
+  "Костандово": "Костандово",
+  "Костенец": "Костенец",
+  "Костинброд": "Костинброд",
+  "Котел": "Котел",
+  "Кочериново": "Кочериново",
+  "Кресна": "Кресна",
+  "Криводол": "Криводол",
+  "Кричим": "Кричим",
+  "Крумовград": "Крумовград",
+  "Крън": "Крън",
+  "Кубрат": "Кубрат",
+  "Куклен": "Куклен",
+  "Кула": "Кула",
+  "Кърджали": "Кърджали",
+  "Кюстендил": "Кюстендил",
+  "Левски": "Левски",
+  "Летница": "Летница",
+  "Ловеч": "Ловеч",
+  "Лозница": "Лозница",
+  "Лом": "Лом",
+  "Луковит": "Луковит",
+  "Лъки": "Лъки",
+  "Любимец": "Любимец",
+  "Лясковец": "Лясковец",
+  "Мадан": "Мадан",
+  "Маджарово": "Маджарово",
+  "Малко Търново": "Малко Търново",
+  "Мартен": "Мартен",
+  "Мездра": "Мездра",
+  "Мелник": "Мелник",
+  "Меричлери": "Меричлери",
+  "Мизия": "Мизия",
+  "Момин проход": "Момин проход",
+  "Момчилград": "Момчилград",
+  "Монтана": "Монтана",
+  "Мъглиж": "Мъглиж",
+  "Неделино": "Неделино",
+  "Несебър": "Несебър",
+  "Николаево": "Николаево",
+  "Никопол": "Никопол",
+  "Нова Загора": "Нова Загора",
+  "Нови Искър": "Нови Искър",
+  "Нови пазар": "Нови пазар",
+  "Обзор": "Обзор",
+  "Омуртаг": "Омуртаг",
+  "Опака": "Опака",
+  "Оряхово": "Оряхово",
+  "Павел баня": "Павел баня",
+  "Павликени": "Павликени",
+  "Пазарджик": "Пазарджик",
+  "Панагюрище": "Панагюрище",
+  "Перник": "Перник",
+  "Перущица": "Перущица",
+  "Петрич": "Петрич",
+  "Пещера": "Пещера",
+  "Пирдоп": "Пирдоп",
+  "Плачковци": "Плачковци",
+  "Плевен": "Плевен",
+  "Плиска": "Плиска",
+  "Пловдив": "Пловдив",
+  "Полски Тръмбеш": "Полски Тръмбеш",
+  "Поморие": "Поморие",
+  "Попово": "Попово",
+  "Пордим": "Пордим",
+  "Правец": "Правец",
+  "Приморско": "Приморско",
+  "Провадия": "Провадия",
+  "Първомай": "Първомай",
+  "Раднево": "Раднево",
+  "Радомир": "Радомир",
+  "Разград": "Разград",
+  "Разлог": "Разлог",
+  "Ракитово": "Ракитово",
+  "Раковски": "Раковски",
+  "Рила": "Рила",
+  "Роман": "Роман",
+  "Рудозем": "Рудозем",
+  "Русе": "Русе",
+  "Садово": "Садово",
+  "Самоков": "Самоков",
+  "Сандански": "Сандански",
+  "Сапарева баня": "Сапарева баня",
+  "Свети Влас": "Свети Влас",
+  "Свиленград": "Свиленград",
+  "Свищов": "Свищов",
+  "Своге": "Своге",
+  "Севлиево": "Севлиево",
+  "Сеново": "Сеново",
+  "Септември": "Септември",
+  "Силистра": "Силистра",
+  "Симеоновград": "Симеоновград",
+  "Симитли": "Симитли",
+  "Славяново": "Славяново",
+  "Сливен": "Сливен",
+  "Сливница": "Сливница",
+  "Сливо поле": "Сливо поле",
+  "Смолян": "Смолян",
+  "Смядово": "Смядово",
+  "Созопол": "Созопол",
+  "Сопот": "Сопот",
+  "София": "София",
+  "Средец": "Средец",
+  "Стамболийски": "Стамболийски",
+  "Стара Загора": "Стара Загора",
+  "Стражица": "Стражица",
+  "Стралджа": "Стралджа",
+  "Стрелча": "Стрелча",
+  "Суворово": "Суворово",
+  "Сунгурларе": "Сунгурларе",
+  "Сухиндол": "Сухиндол",
+  "Съединение": "Съединение",
+  "Сърница": "Сърница",
+  "Твърдица": "Твърдица",
+  "Тервел": "Тервел",
+  "Тетевен": "Тетевен",
+  "Тополовград": "Тополовград",
+  "Троян": "Троян",
+  "Трън": "Трън",
+  "Тръстеник": "Тръстеник",
+  "Трявна": "Трявна",
+  "Тутракан": "Тутракан",
+  "Търговище": "Търговище",
+  "Угърчин": "Угърчин",
+  "Хаджидимово": "Хаджидимово",
+  "Харманли": "Харманли",
+  "Хасково": "Хасково",
+  "Хисаря": "Хисаря",
+  "Цар Калоян": "Цар Калоян",
+  "Царево": "Царево",
+  "Чепеларе": "Чепеларе",
+  "Червен бряг": "Червен бряг",
+  "Черноморец": "Черноморец",
+  "Чипровци": "Чипровци",
+  "Чирпан": "Чирпан",
+  "Шабла": "Шабла",
+  "Шивачево": "Шивачево",
+  "Шипка": "Шипка",
+  "Шумен": "Шумен",
+  "Ябланица": "Ябланица",
+  "Якоруда": "Якоруда",
+  "Ямбол": "Ямбол"
 }
