--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,13 @@
     "SEARCH": "Search",
     "RESERVE": "Reserve",
     "RESERVATION": "Reservation",
-    "RESERVATIONS": "Reservations"
+    "RESERVATIONS": "Reservations",
+    "FORWARD": "Forward",
+    "BACK": "Back",
+    "YES": "Yes",
+    "NO": "No",
+    "KM": "km",
+    "PRICE": "Price"
   },
   "HOME": {
     "AUTH": {
@@ -44,6 +50,7 @@
         "PHONE_ERROR_EMPTY": "Enter phone number",
         "BIRTH_DATE": "Date of birth",
         "BIRTH_DATE_ERROR_EMPTY": "Enter date of birth",
+        "BIRTH_DATE_ERROR_ADULT": "Must be at least 18 years old",
         "PASSWORD": "Password",
         "PASSWORD_REQUIREMENTS": "Password must be minimum 8 symbols and has to contain at least 1 upper and 1 lower character, 1 digit, 1 special symbol",
         "PASSWORD_ERROR_EMPTY": "Enter password",
@@ -114,7 +121,12 @@
       "CARD_VALID": "Valid thru MM/YY",
       "CVV": "CVV security code",
       "AGREE_WITH_RULES": "I agree with the terms of use",
-      "FREE_CANCELATION": "Free cancelation until"
+      "FREE_CANCELATION": "Free cancelation until",
+      "RENTER": "Renter",
+      "DURATION": "Duration",
+      "RESERVATIONS_FOR": "Reservations for",
+      "NO_UPCOMING_FOR_CAR": "No scheduled reservations for this vehicle",
+      "AWAITING_FIRST": "This vehicle is waiting for it's first renter!"
     }
   },
   "USER": {
@@ -128,6 +140,362 @@
     "FREE_CANCEL": "Free cancelation till",
     "CHANGE_PICTURE": "Change picture",
     "INFORMATION": "Information",
-    "SAVE": "Save"
-  }
+    "SAVE": "Save",
+    "FAVOURITES": "Favourites",
+    "FAV_EMPTY": "Your list with favourites is empty!",
+    "SUCCESS": "You have successfully reserved",
+    "ADDED": "Added to favourites!",
+    "REMOVED": "Removed from favourites",
+    "REGISTERED": "Your profile was created successfully!"
+  },
+  "HOSTING": {
+    "PREVIEW": "Preview",
+    "EDIT": "Edit",
+    "MAIN": "Main information",
+    "YEAR": "Year",
+    "CHOOSE_YEAR": "Choose year",
+    "MAKE": "Make",
+    "CHOOSE_MAKE": "Choose make",
+    "MODEL": "Model",
+    "CHOOSE_MODEL": "Choose model",
+    "TRANSMISSION": "Transmission",
+    "MANUAL": "Manual",
+    "AUTOMATIC": "Automatic",
+    "ENGINE_TYPE": "Engine type",
+    "CHOOSE_ENGINE": "Choose engine type",
+    "PETROL": "Petrol",
+    "DIESEL": "Diesel",
+    "ELECTRIC": "Electric",
+    "HYBRID": "Hybrid",
+    "CATEGORY": "Category",
+    "CHOOSE_CATEGORY": "Choose category",
+    "CAR": "Car",
+    "SUV": "SUV",
+    "MINIVAN": "Minivan",
+    "TRUCK": "Truck",
+    "POWER": "Horsepowers",
+    "INPUT_POWER": "Enter horsepowers",
+    "CONSUMPTION": "Consumption",
+    "INPUT_CONSUMPTION": "Enter consumption",
+    "SEATS_COUNT": "Seats count",
+    "INPUT_SEATS": "Enter count",
+    "LOCATION": "Location",
+    "CHOOSE_AREA": "Choose area",
+    "CHOOSE_AREA_ERROR": "Please choose area",
+    "CHOOSE_CITY": "Choose city",
+    "ADDRESS": "Address",
+    "INPUT_ADDRESS": "Enter address",
+    "INPUT_ADDRESS_ERROR": "Please enter address",
+    "ZIP_CODE": "Zip code",
+    "INPUT_ZIP": "Enter z.c.",
+    "INPUT_ZIP_ERROR": "Please enter z.c.",
+    "DESCRIPTION": "Additional information",
+    "ADD_DESC": "Add description",
+    "WRITE_DESC": "Write something more about the car...",
+    "ADD_PICS": "Add pictures",
+    "AMENITIES": "Amenities",
+    "RULES": "Rules and pricing",
+    "RENTING_RULES": "Rules for renting",
+    "PETS": "Pets",
+    "SMOKING": "Smoking",
+    "INCLUDED_KM": "Included kilometers",
+    "INCLUDED_KM_TOOLTIP": "Kilometers limit for the car per day",
+    "PRICE_AFTER_LIMIT": "Price per km over the limit",
+    "PRICE_AFTER_LIMIT_TOOLTIP": "Price for every km exceeding the limit",
+    "PRICE_PER_DAY": "Price for the car per day",
+    "WEEKLY_DISCOUNT": "Weekly discount",
+    "WEEKLY_DISCOUNT_TOOLTIP": "Dicount when renting the car for more than a week",
+    "MONTHLY_DISCOUNT": "Monthly discount",
+    "MONTHLY_DISCOUNT_TOOLTIP": "Dicount when renting the car for more than a month",
+    "RULES_AGREEMENT": "I agree with the terms of use",
+    "ADD": "Add"
+  },
+  "Бензинов": "Petrol",
+  "Дизелов": "Diesel",
+  "Електрически": "Electric",
+  "Хибриден": "Hybrid",
+  "Ръчна": "Manual",
+  "Автоматична": "Automatic",
+  "Лек автомобил": "Car",
+  "Джип": "SUV",
+  "Миниван": "Minivan",
+  "Пикап": "Truck",
+  "Антиблокираща система": "ABS",
+  "Автоматичен контрол на стабилността": "ESP",
+  "Въздушни възглавници": "Airbags",
+  "Парктроник": "Parktronic",
+  "Система за подпомагане на спирането": "Brake assistant",
+  "Система за защита от пробуксуване": "Anti-slip assistant",
+  "Bluetooth / handsfree система": "Bluetooth / handsfree system",
+  "USB, AUX изводи": "USB, AUX",
+  "Бордкомпютър": "Board computer",
+  "Навигация": "Navigation",
+  "Климатик": "Air conditioner",
+  "Подгряване на седалките": "Heated seats",
+  "Стерео уредба": "Sound system",
+  "Автопилот": "Cruise-control",
+  "7 места": "7 seats",
+  "Панорамен люк": "Sunroof",
+  "Рейлинг на покрива": "Roof railing",
+  "Халогенни фарове": "Foglights",
+  "Аларма": "Alarm",
+  "OFFROAD пакет": "OFFROAD package",
+  "Кожен салон": "Leather seats",
+  "Десен волан": "Right hand drive",
+  "Айтос": "Aytos",
+  "Аксаково": "Aksakovo",
+  "Алфатар": "Alfatar",
+  "Антоново": "Antonovo",
+  "Априлци": "Apriltsi",
+  "Ардино": "Ardino",
+  "Асеновград": "Asenovgrad",
+  "Ахелой": "Achelous",
+  "Ахтопол": "Akhtopol",
+  "Балчик": "Balchik",
+  "Банкя": "Banks",
+  "Банско": "Bansko",
+  "Баня": "Bathroom",
+  "Батак": "Batak",
+  "Батановци": "Batanovtsi",
+  "Белене": "Peeling",
+  "Белица": "Belitsa",
+  "Белово": "Belovo",
+  "Белоградчик": "Belogradchik",
+  "Белослав": "Beloslav",
+  "Берковица": "Olivia",
+  "Благоевград": "Blagoevgrad",
+  "Бобов дол": "The bean dollar",
+  "Бобошево": "Of Boboshevo",
+  "Божурище": "Bozhurishte",
+  "Бойчиновци": "Boychinovtsi",
+  "Болярово": "Bolyarovo",
+  "Борово": "Borovo",
+  "Ботевград": "Botevgrad",
+  "Брацигово": "Bratsigovo",
+  "Брегово": "Bregovo",
+  "Брезник": "Breznik",
+  "Брезово": "Birch",
+  "Брусарци": "Broussards",
+  "Бургас": "Burgas",
+  "Бухово": "Buhovo",
+  "Българово": "Balgarovo",
+  "Бяла": "White",
+  "Бяла Слатина": "White Slate",
+  "Бяла Черква": "bila Tserkva",
+  "Варна": "Varna",
+  "Велики Преслав": "The Great Preslav",
+  "Велико Търново": "Veliko Tarnovo",
+  "Велинград": "Velingrad",
+  "Ветово": "Vetovo",
+  "Ветрен": "Windy",
+  "Видин": "Vidin",
+  "Враца": "Vratsa",
+  "Вълчедръм": "Vylechim",
+  "Вълчи дол": "Wolf's Dole",
+  "Върбица": "Willow",
+  "Вършец": "Varshetz",
+  "Габрово": "Gabrovo",
+  "Генерал Тошево": "General Toshevo",
+  "Главиница": "Of Glavinitsa",
+  "Глоджево": "Glodzhevo",
+  "Годеч": "Godech",
+  "Горна Оряховица": "Gorna Oryahovitsa",
+  "Гоце Делчев": "Gotse Delchev",
+  "Грамада": "Gramada",
+  "Гулянци": "Partyings",
+  "Гурково": "Gurkovo",
+  "Гълъбово": "Pigeon",
+  "Две могили": "Two mounds",
+  "Дебелец": "Debelets",
+  "Девин": "Devin",
+  "Девня": "Devnya",
+  "Джебел": "Jebel",
+  "Димитровград": "Dimitrovgrad",
+  "Димово": "Dimovo",
+  "Добринище": "Dobrinishche",
+  "Добрич": "Dobrich",
+  "Долна баня": "The lower bathroom",
+  "Долна Митрополия": "Dolna Metropolia",
+  "Долна Оряховица": "Dolna Oryahovitsa",
+  "Долни Дъбник": "Dolni Dybnik",
+  "Долни чифлик": "Dolly HOMESTEAD",
+  "Доспат": "Dospat",
+  "Драгоман": "Dragoman",
+  "Дряново": "Dryanovo",
+  "Дулово": "Dulovo",
+  "Дунавци": "The Danubians",
+  "Дупница": "Dupnitsa",
+  "Дългопол": "Dolgopola",
+  "Елена": "Elena",
+  "Елин Пелин": "Elin Wormwood",
+  "Елхово": "Elhovo",
+  "Етрополе": "Etropole",
+  "Завет": "Covenant",
+  "Земен": "Earth",
+  "Златарица": "Zlataritsa",
+  "Златица": "Zlatitsa",
+  "Златоград": "Zlatograd",
+  "Ивайловград": "Ivailovgrad",
+  "Игнатиево": "Ignatievo",
+  "Искър": "Iskyr",
+  "Исперих": "Isperih",
+  "Ихтиман": "Ihtiman",
+  "Каблешково": "Kableshkovo",
+  "Каварна": "Kavarna",
+  "Казанлък": "Kazanlak",
+  "Калофер": "Kalofer",
+  "Камено": "Kameno",
+  "Каолиново": "Kaolin",
+  "Карлово": "Karlovo",
+  "Карнобат": "Karnobat",
+  "Каспичан": "Kaspichan",
+  "Кермен": "Kermen",
+  "Килифарево": "Kilifarevo",
+  "Китен": "Kiten",
+  "Клисура": "Gorge",
+  "Кнежа": "Kneja",
+  "Козлодуй": "Kozloduy",
+  "Койнаре": "Koinare",
+  "Копривщица": "Koprivshtitsa",
+  "Костандово": "Kostandovo",
+  "Костенец": "Kostenetz",
+  "Костинброд": "Kostinbrod",
+  "Котел": "Boiler",
+  "Кочериново": "Kocherinovo",
+  "Кресна": "Anapa",
+  "Криводол": "Krivodol",
+  "Кричим": "Cry",
+  "Крумовград": "Krumovgrad",
+  "Крън": "Krn",
+  "Кубрат": "Kubrat",
+  "Куклен": "Puppet",
+  "Кула": "Turret",
+  "Кърджали": "Kardjali",
+  "Кюстендил": "Kyustendil",
+  "Левски": "Levski",
+  "Летница": "Letnitsa",
+  "Ловеч": "Lovech",
+  "Лозница": "Loznica",
+  "Лом": "Scrap",
+  "Луковит": "Lukovit",
+  "Лъки": "Varnishes",
+  "Любимец": "Animal",
+  "Лясковец": "Lyaskovets",
+  "Мадан": "Madan",
+  "Маджарово": "Madjarovo",
+  "Малко Търново": "Malko Tarnovo",
+  "Мартен": "Martin",
+  "Мездра": "Mezdra",
+  "Мелник": "Mills",
+  "Меричлери": "Merichleri",
+  "Мизия": "Of Misia",
+  "Момин проход": "Momin pass",
+  "Момчилград": "The Momchilgrad",
+  "Монтана": "Montana",
+  "Мъглиж": "Foggy",
+  "Неделино": "Sunday",
+  "Несебър": "Nessebar",
+  "Николаево": "Nikolaev",
+  "Никопол": "Nikopol",
+  "Нова Загора": "New Zagora",
+  "Нови Искър": "New Sparks",
+  "Нови пазар": "New market",
+  "Обзор": "Review",
+  "Омуртаг": "Omurtag",
+  "Опака": "Opaka",
+  "Оряхово": "Oryakhovo",
+  "Павел баня": "Pavel Banya",
+  "Павликени": "Pavlikeni",
+  "Пазарджик": "Pazardzhik",
+  "Панагюрище": "Panagyurishte",
+  "Перник": "Pernik",
+  "Перущица": "Perushtitsa",
+  "Петрич": "Petrich",
+  "Пещера": "Cave",
+  "Пирдоп": "Pirdop",
+  "Плачковци": "Tearful",
+  "Плевен": "Pleven",
+  "Плиска": "Pliska",
+  "Пловдив": "Plovdiv",
+  "Полски Тръмбеш": "Polski Trambesh",
+  "Поморие": "Pomorie",
+  "Попово": "Popovo",
+  "Пордим": "Pordim",
+  "Правец": "Pravetz",
+  "Приморско": "Primorsko",
+  "Провадия": "Provadia",
+  "Първомай": "May day",
+  "Раднево": "Radnevo",
+  "Радомир": "Radomir",
+  "Разград": "Razgrad",
+  "Разлог": "Razlog",
+  "Ракитово": "Rakitovo",
+  "Раковски": "Rakovski",
+  "Рила": "the Rila mountains",
+  "Роман": "Roman",
+  "Рудозем": "Rudozem",
+  "Русе": "Ruse",
+  "Садово": "Capital education",
+  "Самоков": "Samokov",
+  "Сандански": "Sandanski",
+  "Сапарева баня": "Sapareva Banya",
+  "Свети Влас": "Saint Vlas",
+  "Свиленград": "Svilengrad",
+  "Свищов": "Svishtov",
+  "Своге": "Svoge",
+  "Севлиево": "Sevlievo",
+  "Сеново": "Senovo",
+  "Септември": "September",
+  "Силистра": "Silistra",
+  "Симеоновград": "Simeonovgrad",
+  "Симитли": "Simitli",
+  "Славяново": "Slavyanovo",
+  "Сливен": "Sliven",
+  "Сливница": "Slivnitza",
+  "Сливо поле": "Mixed field",
+  "Смолян": "Smolyan",
+  "Смядово": "Smyadovo",
+  "Созопол": "Sozopol",
+  "Сопот": "Sopot",
+  "София": "Sofia",
+  "Средец": "Sredets",
+  "Стамболийски": "Stamboliyski",
+  "Стара Загора": "Stara Zagora",
+  "Стражица": "Guard",
+  "Стралджа": "Straldzha",
+  "Стрелча": "Strelcha",
+  "Суворово": "Suvorovo",
+  "Сунгурларе": "Sungurlare",
+  "Сухиндол": "Sukhindol",
+  "Съединение": "Connection",
+  "Сърница": "SYRIZA",
+  "Твърдица": "Solid",
+  "Тервел": "Tervel",
+  "Тетевен": "Teteven",
+  "Тополовград": "Topolovgrad",
+  "Троян": "Troyan",
+  "Трън": "Milk thistle",
+  "Тръстеник": "Reed",
+  "Трявна": "Tryavna",
+  "Тутракан": "Tutrakan",
+  "Търговище": "Targovishte",
+  "Угърчин": "Ugyrchin",
+  "Хаджидимово": "Hadzhidimovo",
+  "Харманли": "Harmanli",
+  "Хасково": "Haskovo",
+  "Хисаря": "Hisarya",
+  "Цар Калоян": "King Kaloyan",
+  "Царево": "Tsarevo",
+  "Чепеларе": "Chepelare",
+  "Червен бряг": "Red Coast",
+  "Черноморец": "Chernomorets",
+  "Чипровци": "Chiprovtsi",
+  "Чирпан": "Chirpan",
+  "Шабла": "Shabla",
+  "Шивачево": "Shivachevo",
+  "Шипка": "Dogrose",
+  "Шумен": "Noisy",
+  "Ябланица": "Jablanica",
+  "Якоруда": "Yakoruda",
+  "Ямбол": "Yambol"
 }
