--- a/src/assets/i18n/bg.json
+++ b/src/assets/i18n/bg.json
@@ -146,7 +146,8 @@
     "SUCCESS": "Успешно резервирахте",
     "ADDED": "Добавен в любими!",
     "REMOVED": "Премахнат от любими!",
-    "REGISTERED": "Вашият профил беше създаден успешно!"
+    "REGISTERED": "Вашият профил беше създаден успешно!",
+    "PASSWORD_CHANGE": "Смяна на парола"
   },
   "HOSTING": {
     "PREVIEW": "Преглед",
